--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
       </div>
       <button class="btn blue" id="submit">Submit</button>
 
+      <div class="progress blue" id="progress-bar">
+        <div class="determinate"></div>
+      </div>
+
       <div class="invisible" id="spinner">
         <div class="preloader-wrapper active">
           <div class="spinner-layer spinner-blue-only">
@@ -56,6 +60,24 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-storage.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyC69UlY6-nX58VAsWY_FxRYNcQz65HxFUw",
+        authDomain: "lgim-stt.firebaseapp.com",
+        databaseURL: "https://lgim-stt.firebaseio.com",
+        projectId: "lgim-stt",
+        storageBucket: "lgim-stt.appspot.com",
+        messagingSenderId: "676795015015",
+        appId: "1:676795015015:web:67a2723a118472304d99c2",
+        measurementId: "G-YSVF271RC6",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <script src="./index.ts"></script>
   </body>
 </html>
