--- a/src/index.html
+++ b/src/index.html
@@ -34,24 +34,8 @@
       </div>
       <button class="btn blue" id="submit">Submit</button>
 
-      <div class="progress blue" id="progress-bar">
-        <div class="determinate"></div>
-      </div>
-
-      <div class="invisible" id="spinner">
-        <div class="preloader-wrapper active">
-          <div class="spinner-layer spinner-blue-only">
-            <div class="circle-clipper left">
-              <div class="circle"></div>
-            </div>
-            <div class="gap-patch">
-              <div class="circle"></div>
-            </div>
-            <div class="circle-clipper right">
-              <div class="circle"></div>
-            </div>
-          </div>
-        </div>
+      <div class="progress" id="progress-bar">
+        <div class="determinate blue"></div>
       </div>
 
       <div class="blue-grey darken-4 white-text">
